[CI] Auto commit changes from spotless